Update submodule URLs to point to GitHub repositories

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "rustlings"]
 	path = rustlings
-	url = ./rustlings
+	url = git@github.com:leidix/rustlings.git
 	branch = master
 [submodule "get-dependencies"]
 	path = get-dependencies
-	url = ./get-dependencies
+	url = git@github.com:leidix/get-dependencies.git
 	branch = main
