--- a/src/rustlings/dev/Cargo.toml
+++ b/src/rustlings/dev/Cargo.toml
@@ -221,3 +221,5 @@ infinite_loop = "deny"
 mem_forget = "deny"
 # Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
 disallowed_methods = "allow"
+
+[workspace]
