--- a/.devcontainer/trixie-slim/devcontainer.json
+++ b/.devcontainer/trixie-slim/devcontainer.json
@@ -1,23 +1,23 @@
 {
-	"name": "rust-book-devcontainer",
 
-	"build": {
-		"dockerfile": "../Dockerfile.debian",
-		"context": "..",
-		"args": {
-			"BASE_IMAGE": "debian",
-			"BASE_TAG": "trixie-slim"
-		}
-	},
+	"name": "compose::rust-book-devcontainer::client-debian",
+
+	"dockerComposeFile": "../docker-compose.yml",
+	"service": "client-debian",
+	"shutdownAction": "stopCompose",
 
 	"remoteUser": "vscode",
 
 	// Note: postCreateCommand will not work when using a vscode workspace file
-	"workspaceMount": "source=${localWorkspaceFolder}/..,target=/home/vscode/workspace,type=bind",
-	"workspaceFolder": "/home/vscode/workspace/rust-book/.vscode/rust-book.code-workspace",
+	"workspaceFolder": "/home/vscode/workspace/.vscode/rust-book.code-workspace",
 
 	"containerEnv": {
 		"SHELL": "/bin/zsh"
+	},
+
+	"features": {
+		"ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers-extra/features/act:1": {}
 	},
 
 	"customizations": {
@@ -28,11 +28,14 @@
 				"serayuzgur.crates",
 				"ms-python.python",
 				"charliermarsh.ruff",
+				"ms-vscode.makefile-tools",
 				"ms-azuretools.vscode-docker",
 				"ms-azuretools.vscode-containers",
 				"ms-vscode-remote.remote-containers",
 				"yzhang.markdown-all-in-one",
-				"tamasfe.even-better-toml"
+				"tamasfe.even-better-toml",
+				"ms-vscode.cpptools-extension-pack",
+				"nefrob.vscode-just-syntax"
 			]
 		}
 	}
