mirror host user's ID, GID and username

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,5 @@
 services:
-  client-debian:
-    container_name: devcontainer-rust-book
-    # Load runtime environment vars from .devcontainer/.env
+  debian-trixie-slim:
     build:
       context: .
       dockerfile: Dockerfile.debian
@@ -9,8 +7,7 @@ services:
         BASE_IMAGE: "debian"
         BASE_TAG: "trixie-slim"
     volumes:
-      - ..:/home/vscode/workspace
-    working_dir: /home/vscode/workspace
-    tty: true
-    stdin_open: true
+      - ..:/home/${USER}/workspace/rust-book
+    working_dir: /home/${USER}/workspace/rust-book
     restart: unless-stopped
+    tty: true
