--- a/.devcontainer/Dockerfile.debian
+++ b/.devcontainer/Dockerfile.debian
@@ -1,15 +1,10 @@
 # ---- Base Stage ----
-# Common setup, user creation, and installation of essential packages
-# that are needed in both builder and final stages.
-ARG BASE_IMAGE
-ARG BASE_TAG
+# Installs essential system packages. User and shell setup is handled by a dev container feature.
+ARG BASE_IMAGE=debian
+ARG BASE_TAG=trixie-slim
 FROM ${BASE_IMAGE}:${BASE_TAG} AS base
 
 ENV DEBIAN_FRONTEND=noninteractive
-# Non-root user arguments
-ARG USERNAME=vscode
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
 
 # Install essential packages
 RUN apt-get update \
@@ -18,9 +13,9 @@ RUN apt-get update \
         lldb \
         python3 \
         python3-pip \
-        zsh \
         fzf \
         sudo \
+        zsh \
         curl \
         ca-certificates \
         build-essential \
@@ -32,51 +27,22 @@ RUN apt-get update \
         bash \
     && rm -rf /var/lib/apt/lists/*
 
-# Create non-root user and grant sudo access
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m -s /bin/zsh $USERNAME \
-    && echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME
-
 
 # ---- Builder Stage ----
 # Used to build/install tools like 'just' and 'rustup'.
-# Changes here are less frequent than user-level config.
 FROM base AS builder
-
-ARG USERNAME=vscode
 
 # Install 'just' and its zsh completions
 RUN curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin \
     && mkdir -p /usr/local/share/zsh/site-functions \
     && just --completions zsh > /usr/local/share/zsh/site-functions/_just
 
-# Install 'rustup' as the non-root user
-USER $USERNAME
-RUN curl -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path
 
 
 # ---- Final Stage ----
-# Assemble the final image by copying artifacts from the builder
-# and applying user-specific configuration.
+# Assemble the final image by copying artifacts from the builder.
 FROM base AS final
-
-ARG USERNAME=vscode
 
 # Copy 'just' binary and completions from builder stage
 COPY --from=builder /usr/local/bin/just /usr/local/bin/just
 COPY --from=builder /usr/local/share/zsh/site-functions/_just /usr/local/share/zsh/site-functions/_just
-
-# Copy 'rustup' and '.cargo' directories from builder stage
-COPY --from=builder --chown=$USERNAME:$USERNAME /home/$USERNAME/.rustup /home/$USERNAME/.rustup
-COPY --from=builder --chown=$USERNAME:$USERNAME /home/$USERNAME/.cargo /home/$USERNAME/.cargo
-
-# Install oh-my-zsh for the non-root user
-USER $USERNAME
-RUN git clone https://github.com/ohmyzsh/ohmyzsh.git /home/$USERNAME/.oh-my-zsh \
-    && cp /home/$USERNAME/.oh-my-zsh/templates/zshrc.zsh-template /home/$USERNAME/.zshrc
-
-# Set final environment, workdir, and default command
-ENV PATH="/home/${USERNAME}/.cargo/bin:${PATH}"
-WORKDIR /home/$USERNAME/workspace
-CMD ["/bin/zsh"]
